fixed page scrolling issue on mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -429,6 +429,7 @@ img {
 }
 body {
   min-height:100%;
+  -webkit-overflow-scrolling: touch;
 }
 body #primary {
   max-width: 80%;
@@ -592,7 +593,7 @@ article .meta p {
   position: relative;
 }
 .featured .title {
-  width:50%;
+  max-width:80%;
   position: relative;
   top:50%;
   transform: translateY(-50%);
@@ -893,6 +894,9 @@ footer {
 }
 /* ----- MEDIA QUERIES ---------- */
 @media screen and (max-width: 768px) {
+  body {
+    -webkit-overflow-scrolling: touch;
+  }
   .site-nav {
     position: absolute;
     width:100%;
@@ -948,8 +952,25 @@ footer {
     font-size:28px;
     font-size:2.8rem;
   }
+  .post-container .featured .title {
+    width:auto;
+    overflow:hidden;
+    font-size:1.8rem;
+  }
 }
 @media only screen and (min-device-width:320px) and (max-device-width:480px) {
+  body {
+    -webkit-overflow-scrolling: touch;
+    max-width:100%;
+  }
+  .post-container .featured .title {
+    width:auto;
+    overflow:hidden;
+    font-size:1.8rem;
+  }
+  .content-container {
+    padding:0 10px;
+  }
   article .post-snippet {
     display:none;
   }
